<resources>
    <string name="app_name">WeatherApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_03_03_2023_19_00">03/03/2023 19:00</string>
    <string name="Minsk">Minsk</string>
    <string name="search">search</string>
    <string name="refresh">refresh</string>
    <string name="image_status_weather">status</string>
    <string name="empty">Empty</string>
    <string name="enter_the_name_of_the_city">Enter the name of the city</string>
    <string name="confirm">Confirm</string>
</resources>